[package]
name = "sfdc"
version = "0.0.1"
edition = "2021"

[features]
serde = ["dep:serde", "bitvec/serde"]

[dependencies]
bitvec = "1"
huff_coding = "1"
# TODO: default-features = false ?
serde = { version = "1", optional = true }
mem_dbg = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "basic"
harness = false
