[package]
name = "sfdc"
version = "0.0.1"
edition = "2021"

[features]
serde = ["dep:serde", "bitvec/serde"]

[dependencies]
bitvec = "1"
# TODO: default-features = false ?
serde = { version = "1", optional = true }
mem_dbg = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "new"
harness = false

[[bench]]
name = "decode_all"
harness = false

[[bench]]
name = "decode_range"
harness = false

[[bench]]
name = "decode_one"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
